# nanoGPT

./: pyproject.toml  sample.py  train.py
config/: train_gpt2.py  train_gpt2_word_tokens.py  train_gpt2_word_tokens_letter.py  train_shakespeare.py  train_shakespeare_word_tokens.py  train_shakespeare_word_tokens_letter.py
data/openwebtext_word_tokens/: prepare.py
data/openwebtext_word_tokens_letter/: prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
data/shakespeare_word_tokens/: prepare.py
data/shakespeare_word_tokens_letter/: prepare.py  readme.md
results/: gpt2-word-tokens-c-temp-0.8-topk-200.txt  gpt2-word-tokens-c-temp-1-topk-200.txt  gpt2-word-tokens-c-temp-1-topk-null.txt  gpt2-word-tokens-temp-0.8-topk-200.txt  gpt2-word-tokens-temp-1-topk-200.txt  gpt2-word-tokens-temp-1-topk-null.txt
